# stm_workbench

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.json
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py  middleware.py
backend/app/api/: crawler.py  health.py  intake.py  ontology.py  requests.py  workflow.py
backend/app/domain/: catalog.py  ontology.py  ontology_search.py  physical.py  requests.py  workflow.py
backend/app/graph/: driver.py  migrations.py
backend/app/graph/queries/: __init__.py  catalog_verify_column.cypher  check_attribute_exists.cypher  create_request.cypher  get_attribute_sources.cypher  get_ontology_catalog.cypher  get_request_by_id.cypher  get_workflow_template.cypher  list_attributes_for_entity.cypher  list_entities.cypher  ontology_label_counts.cypher  ontology_relationship_summary.cypher  ontology_search_attributes.cypher  ontology_show_indexes.cypher  record_crawl_run.cypher  upsert_physical_column.cypher
backend/app/services/: catalog_client.py  crawler_service.py  excel_service.py  ontology_service.py  request_service.py  validation_service.py  workflow_service.py
backend/app/workflow/: engine.py
backend/tests/: conftest.py  test_crawler_service.py  test_excel_intake.py  test_ontology_entities.py  test_ontology_schema.py  test_ontology_search.py  test_request_lifecycle.py  test_validation_service.py  test_workflow_template.py
docs/: build-plan.md  getting-started-with-claude-code.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
(+33 files in other folders)
